--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.hotelalura.hotelalura/com.hotelalura.hotelalura.HelloApplication</mainClass>
+                            <mainClass>com.hotelalura.hotelalura/com.hotelalura.AppSaludar</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
